fixed contact form on firefox v2

--- a/src/style.styl
+++ b/src/style.styl
@@ -100,7 +100,6 @@ legend
 	color: var(--white)
 	font-weight: 900
 	font-size: 2.5rem
-	background: var(--black)
 
 .about
 	margin: 0 2em
